[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/crosshair.png" type="Texture" id=2]
[ext_resource path="res://addons/line_3d/Line3D_material.tres" type="Material" id=3]
[ext_resource path="res://addons/line_3d/Line3D.gd" type="Script" id=4]
[ext_resource path="res://Assets/Images/speedlines.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/touch-notifier-left.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/touch-notifier-bottom.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/grapple.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/sprint.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/throwable.png" type="Texture" id=10]
[ext_resource path="res://Assets/Models/Crab/Crab.glb" type="PackedScene" id=11]
[ext_resource path="res://Assets/Models/Player/fingergun_left.glb" type="PackedScene" id=12]
[ext_resource path="res://addons/jm_pp_outlines/jm_pp_outlines_camera.gd" type="Script" id=13]
[ext_resource path="res://Assets/Images/vignette.png" type="Texture" id=14]
[ext_resource path="res://Assets/Images/Raindrops.png" type="Texture" id=15]
[ext_resource path="res://Scenes/Player/Camera.gd" type="Script" id=16]
[ext_resource path="res://Assets/Images/dot.png" type="Texture" id=17]
[ext_resource path="res://addons/PerfMonitor/PerfMonitor.gd" type="Script" id=18]
[ext_resource path="res://Assets/Images/BloodOverlay.png" type="Texture" id=19]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
flags_no_depth_test = true
params_cull_mode = 1
params_grow = true
params_grow_amount = 0.01
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=4]
render_priority = 127
next_pass = SubResource( 3 )
flags_no_depth_test = true
albedo_color = Color( 1, 0, 0.968627, 1 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.5, -0.4, -0.75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -90, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.5, -0.4, -0.75 ), Vector3( -0.5, -1.11779, 0.0236123 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -90, 0 ), Vector3( 2.34948e-06, -90, 69.737 ) ]
}

[sub_resource type="Shader" id=7]
code = "/*
	放射状ブラーエフェクト by あるる（きのもと　結衣） @arlez80
	Radial Blur Effect by Yui Kinomoto

	MIT License
*/
shader_type canvas_item;

// 発射中央部
uniform vec2 blur_center = vec2( 0.5, 0.5 );
// ブラー強度
uniform float blur_power : hint_range( 0.0, 1.0 ) = 0.01;
// サンプリング回数
uniform int sampling_count : hint_range( 1, 64 ) = 6;

void fragment( )
{
	vec2 direction = SCREEN_UV - blur_center;
	vec3 c = vec3( 0.0, 0.0, 0.0 );
	float f = 1.0 / float( sampling_count );
	for( int i=0; i < sampling_count; i++ ) {
		c += texture( SCREEN_TEXTURE, SCREEN_UV - blur_power * direction * float(i) ).rgb * f;
	}
	COLOR.rgb = c;
}
"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/blur_center = Vector2( 0.5, 0.5 )
shader_param/blur_power = 0.01
shader_param/sampling_count = 6

[node name="FPS" type="KinematicBody" groups=[
"Player",
]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Crosshair" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dot" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="Camera" type="Camera" parent="Head"]
current = true
fov = 90.0
script = ExtResource( 16 )

[node name="PPOutlinesCamera" type="Camera" parent="Head"]
far = 1500.0
script = ExtResource( 13 )
color_outline_scale = 0.0
depth_outline_scale = 5.0
depth_threshold = 5.0
depth_multiplier = 1500.0

[node name="GrappleRay" type="RayCast" parent="Head"]
enabled = true
cast_to = Vector3( 0, 0, -15 )

[node name="DashTarget" type="Position3D" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7 )

[node name="Throwable" type="Spatial" parent="Head"]

[node name="StartPosition" type="Position3D" parent="Head/Throwable"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="TargetPosition" type="Position3D" parent="Head/Throwable"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -9 )

[node name="FingerGun" parent="Head" instance=ExtResource( 12 )]
transform = Transform( -1.60821e-08, 8.04136e-09, -0.3, 0.281434, 0.103899, -1.23019e-08, 0.103899, -0.281434, -1.31134e-08, -0.5, -1.11779, 0.0236123 )

[node name="Cube" parent="Head/FingerGun" index="0"]
material/0 = SubResource( 4 )

[node name="Muzzle" type="Position3D" parent="Head/FingerGun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.615301, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/FingerGun"]
anims/pull_up = SubResource( 5 )
anims/put_down = SubResource( 6 )

[node name="SpotLight" type="SpotLight" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
visible = false
spot_range = 27.0
spot_angle = 44.1392

[node name="GrapplingHook" type="Node" parent="."]

[node name="GrappleLine" type="ImmediateGeometry" parent="GrapplingHook"]
visible = false
material_override = ExtResource( 3 )
script = ExtResource( 4 )
points = [ Vector3( 0, 0, 0 ), Vector3( 0, 0, -5 ) ]
width = 0.05
global_coords = true
texture_mode = 1
default_color = Color( 1, 0, 0, 1 )

[node name="Hook" parent="GrapplingHook" instance=ExtResource( 11 )]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 1, 0 )
visible = false

[node name="WallrunRays" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.481043, 0 )

[node name="Right" type="RayCast" parent="WallrunRays"]
enabled = true
cast_to = Vector3( 1, 0, 0 )

[node name="Left" type="RayCast" parent="WallrunRays"]
enabled = true
cast_to = Vector3( -1, 0, 0 )

[node name="ClimbRays" type="Spatial" parent="."]

[node name="Bottom" type="RayCast" parent="ClimbRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1 )

[node name="Top" type="RayCast" parent="ClimbRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1 )

[node name="GUI" type="Node" parent="."]

[node name="LeftNotifier" type="TextureRect" parent="GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightNotifier" type="TextureRect" parent="GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomNotifier" type="TextureRect" parent="GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopNotifier" type="TextureRect" parent="GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrappleIcon" type="Sprite" parent="GUI"]
position = Vector2( 750.879, 131.352 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )

[node name="DashIcon" type="Sprite" parent="GUI"]
position = Vector2( 800.879, 131.352 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 9 )

[node name="ThrowableIcon" type="Sprite" parent="GUI"]
position = Vector2( 850.879, 131.352 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 10 )

[node name="Vignette" type="TextureRect" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedLines" type="Control" parent="GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedLines" type="TextureRect" parent="GUI/SpeedLines"]
modulate = Color( 1, 1, 1, 0.247059 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadialBlur" type="ColorRect" parent="GUI/SpeedLines"]
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Water" type="TextureRect" parent="GUI"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="GUI/Water"]

[node name="Blood" type="TextureRect" parent="GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 19 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timers" type="Node" parent="."]

[node name="DashLineTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="GrappleTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="DashTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="ThrowableTimer" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="SlideTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="ClimbTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="DeathTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="Debug" type="Node2D" parent="."]
visible = false

[node name="Grappling" type="Label" parent="Debug"]
margin_left = 5.0397
margin_top = 161.27
margin_right = 177.04
margin_bottom = 217.27
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wallrunning" type="Label" parent="Debug"]
margin_left = 5.51965
margin_top = 185.59
margin_right = 177.52
margin_bottom = 241.59
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vectors" type="Label" parent="Debug"]
margin_left = 8.51626
margin_top = 209.563
margin_right = 180.517
margin_bottom = 265.563
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FOV" type="Label" parent="Debug"]
margin_left = 7.01797
margin_top = 248.519
margin_right = 179.018
margin_bottom = 304.519
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CamRot" type="Label" parent="Debug"]
margin_left = 14.5689
margin_top = 280.611
margin_right = 186.569
margin_bottom = 336.611
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GunAnim" type="Label" parent="Debug"]
margin_left = 12.8872
margin_top = 305.838
margin_right = 184.887
margin_bottom = 361.838
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Climbing" type="Label" parent="Debug"]
margin_left = 11.2054
margin_top = 339.474
margin_right = 183.205
margin_bottom = 395.474
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="Debug"]
margin_left = 9.70704
margin_top = 364.945
margin_right = 181.707
margin_bottom = 420.945
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Monitor" type="CanvasLayer" parent="Debug"]
script = ExtResource( 18 )

[connection signal="animation_finished" from="Head/FingerGun/AnimationPlayer" to="." method="_on_FingerGunAnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timers/DashLineTimer" to="." method="_on_DashLineTimer_timeout"]
[connection signal="timeout" from="Timers/GrappleTimer" to="." method="_on_GrappleTimer_timeout"]
[connection signal="timeout" from="Timers/DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="Timers/ThrowableTimer" to="." method="_on_ThrowableTimer_timeout"]
[connection signal="timeout" from="Timers/SlideTimer" to="." method="_on_SlideTimer_timeout"]
[connection signal="timeout" from="Timers/ClimbTimer" to="." method="_on_ClimbTimer_timeout"]
[connection signal="timeout" from="Timers/DeathTimer" to="." method="_on_DeathTimer_timeout"]

[editable path="Head/FingerGun"]
